bug 330660, when constraining, skip underspecified items and do them later. This make certain more complex templates update properly. r+sr=bz