content/xul/templates/src/nsRDFConMemberTestNode.h
@@ -57,7 +57,8 @@ public:
                            nsIAtom* aContainerVariable,
                            nsIAtom* aMemberVariable);
 
-    virtual nsresult FilterInstantiations(InstantiationSet& aInstantiations) const;
+    virtual nsresult FilterInstantiations(InstantiationSet& aInstantiations,
+                                          PRBool* aCantHandleYet) const;
 
     virtual PRBool
     CanPropagate(nsIRDFResource* aSource,
